--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 body{
     margin:0;
     font-family: 'Montserrat', sans-serif;
-    }
+    padding: 50px o;
+}
 header{
     display: flex;
     background-image: url(../img/background.png);
@@ -12,7 +13,7 @@ header{
     height: 420px;
     flex-direction: column;
     justify-content: center;
-    }
+}
 header > div{
     display: flex;
     margin: 20px 0;
@@ -40,7 +41,7 @@ header> div > p{
     width: 90%;
     padding-bottom: 28px;
     color: white;
-    }
+}
 span{
     color:rgb(20, 211, 52);
 }
@@ -49,32 +50,101 @@ span{
     margin: 0;
     display: flex;
     justify-content: space-between;
-    }
+}
 
-    header img {
+header img {
     background-color: rgba(0, 0, 0, 0.5);
     padding: 10px;
     border-radius: 50%;
 }
- header img:hover{
-    background-color: rgb(20, 211, 52);
-    }
 
-section img{
+header img:hover{
+    background-color: rgb(20, 211, 52);
+}
+
+.branca{
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+}
+
+.box3{
+    display: flex;
+    padding: 40px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.box2{
+    display: flex;
+    padding: 40px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.box1{
+    display: flex;
+    padding: 40px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.branca img{
     background-color: rgb(20, 211, 52);
     padding: 20px;
     border-radius: 50%;
     width: 40px;
     height: 40px;
 }
-section p{
+
+.branca p{
     font-size: 0.8rem;
     font-weight: 280;
     line-height: 25px;
     margin: 0;  
     width: 90%;
-    padding-bottom: 28px;
-    }
+    padding: 20px 0;
+    text-align: center;
+}
+
+.cinza{
+    background-color: rgba(211, 211, 211, 0.938);
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 50px 0;
+}
+
+.cinza h2{
+    font-size: 1.1rem;
+    font-weight: 100 bold;
+    margin:0;
+    padding-top: 20px;
+}
+
+.section2{
+    display: flex;
+    flex-direction: column;
+    margin: 20px auto;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.video{
+    border-radius: 50%;
+}
+
+iframe{
+    width: 400px;
+    height: 200px;
+}
+
 
 @media(min-width: 992px){
     header{
@@ -96,15 +166,15 @@ section p{
         width: 450px;
         padding-bottom: 28px;
         color: white;
-        }
-    section{
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 30px;
     }
-    section img{
+    .branca{
+        margin: 0 auto;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 30px;
+    }
+    .branca img{
         background-color: rgb(20, 211, 52);
         padding: 20px;
         margin:0;
@@ -113,7 +183,7 @@ section p{
         height: 40px;
         justify-content: center;
     }
-    section p{
+    .branca p{
         font-size: 0.8rem;
         font-weight: 280;
         line-height: 25px;
@@ -122,7 +192,7 @@ section p{
         justify-content: center;
         color: rgb(129, 129, 129);
         text-align: center;
-        }
+    }
     .box3{
         display: flex;
         padding: 40px;
@@ -143,5 +213,31 @@ section p{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+    }
+    .cinza{
+        background-color: rgba(211, 211, 211, 0.938);
+        margin: 20px auto;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        padding: 40px 10%;
+    }
+
+    .section2{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        margin: 0;
+    }
+    .paragrafo h2{
+        font-size: 1.1rem;
+        font-weight: 100 bold;
+        text-align: start;
+        padding: 0;
+    }
+    .paragrafo{
+        width: 85%;
     }
 }
